# transformers_from_scratch

./: .gitignore  LICENSE  README.md  dvc.yaml  format.sh  params.yaml  pyproject.toml  requirements.txt
config/: config.yaml
src/Transformer/: __init__.py
src/Transformer/components/: build_model.py  data_ingestion.py  model_training.py  preprocessing.py
src/Transformer/config/: configuration.py
src/Transformer/entity/: config_entity.py
src/Transformer/pipelines/: stage_01_data_ingestion.py  stage_02_preprocessing.py  stage_03_build_model.py  stage_04_model_training.py
src/Transformer/utils/: common.py
